# parameter

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  README.MD  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  adapter.rst  conf.py  exception.rst  guide.rst  index.rst  types.rst
parameter/: __init__.py  adapter.py  argument.py  exception.py  model.py  types.py
parameter/adapter/: base.py
tests/: test_adapter.py  test_model.py  test_types.py
