[metadata]
name = parameter
author = Gray King
author-email = grayking.w@gmail.com
summary = "Parameter model."
version = 0.0.1
url = https://github.com/coldnight/parameter
license = Apache 2.0

classifiers = 
    Topic :: Internet
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: Chinese (Simplified)
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages = parameter
